disable guide link

--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -20,8 +20,8 @@ foo:
 
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: /docs/quick-start-guide/
+#  - title: "Quick-Start Guide"
+#    url: /docs/quick-start-guide/
   - title: "About"
     url: /about/
   - title: "Sample Posts"
@@ -35,8 +35,8 @@ main:
 # documentation links
 docs:
   - title: Getting Started
-    children:
-      - title: "Quick-Start Guide"
+#    children:
+#      - title: "Quick-Start Guide"
         url: /docs/quick-start-guide/
       - title: "Structure"
         url: /docs/structure/
