--- a/_config.yml
+++ b/_config.yml
@@ -93,9 +93,9 @@ social:
 
 # Analytics
 analytics:
-  provider               : false # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : "google-gtag" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          : 'G-XM5R1P8EW3'
+    tracking_id          : "G-XM5R1P8EW3"
     anonymize_ip         : # true, false (default)
 
 
