--- a/_config.yml
+++ b/_config.yml
@@ -102,10 +102,10 @@ analytics:
 # Site Author
 author:
   name             : "ENOO"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : /assets/images/scof.jpg"
   bio              : "취미로 앱 개발하는 직장인입니다"
   location         : "Seoul, KR"
-  email            :
+  email            : as.enoosoft@gmail.com
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
